src/main/java/com/example/credit_service_project/service/errors/exceptions/CurrencyException.java
package com.example.credit_service_project.service.errors.exceptions;

public class CurrencyException extends RuntimeException {
    public CurrencyException(String message) {
        super(message);
    }
}
